# classification_ethnicity

./: .gitignore  20251204_Notebook_Updated_EthnicityClassificatoin.ipynb  3_ETNO_database_final_REORDERED_Version 6_EN.XLSX  Anexa_Caracteristici_Etnoculturale_RPL2024.xlsx  README.md  group_survey.ipynb  pyproject.toml  requirements.txt  results-survey335431.csv
