[project]
name = "classification-of-ethnicity-variables"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
    "xlrd>=2.0.2",
]
